IE fixes: maximized block height, block titlebar visible, items in developer functionmenu right height

--- a/resources/style/workspace.css
+++ b/resources/style/workspace.css
@@ -27,7 +27,7 @@ form{
 /* Main Layout Definition Begin */
 div.ws_head{
 	position: relative;
-	height: 89px;
+	height: 60px;
 	background: #F2F2F2 url(images/bg_head.gif) repeat-x;
 	padding: 0;
 	margin: 0;
@@ -36,15 +36,16 @@ div.ws_head{
 /* App Logo */
 div.ws_head div.ws_appdecor{
 	position: absolute;
-	top: 0;
+	top: 2px;
 	left: 0;
 	width: 96px;
-	height: 31px;
+	height: 26px;
 	background: url(images/eplatform.gif) no-repeat;
 }
+
 div.ws_head div.ws_appinfo{
 	float: left;
-	margin: 32px 0 0 0;
+	margin: 22px 0 0 0;
 	padding: 8px 0 0 16px;
 	font-size: 1.4em;
 	font-weight: bold;
@@ -69,9 +70,11 @@ div.ws_head div.ws_appinfo{
 	margin-top: 60px;
 	float: right;
 }
+
 .ws_body .ws_mainnavigation ul.wf_tabbar li{
 	float: left;
 	background: url(images/tabbar/bg_item_left.gif) left top no-repeat;
+	background-position: 0 4px;
 	z-index: 0;
 }
 .ws_body .ws_mainnavigation ul.wf_tabbar li a{
@@ -87,6 +90,7 @@ div.ws_head div.ws_appinfo{
 
 .ws_body .ws_mainnavigation ul.wf_tabbar li a:hover{
 	background: url(images/tabbar/bg_item_main_hover.gif) no-repeat;
+	background-position: 0 4px;
 	text-decoration: none;
 	color:  #38485C;
 	z-index: 0;
@@ -117,7 +121,7 @@ div.ws_layout_twocolumn{
 /* Left menu */
 div.ws_functionmenu{
 	position: absolute;
-	top: 89px;
+	top: 51px;
 	bottom: 4px;
 	left: 0;
 	width: 202px;
@@ -126,9 +130,9 @@ div.ws_functionmenu{
 	height: expression(
 	(
 	document.body.clientHeight) ?
-	document.body.clientHeight - 97 + 'px'
+	document.body.clientHeight - 59 + 'px'
 	:
-	document.documentElement.clientHeight - 97 + 'px'
+	document.documentElement.clientHeight - 59 + 'px'
 	);
 }
 
@@ -184,7 +188,7 @@ html>body div.ws_functionmenu div.ws_bottom {
 div.ws_smallloginbox{
 	position: absolute;
 	right: 0;
-	padding: 7px 4px 0 25px;
+	padding: 1px 1px 0 15px;
 	width: 271px;
 	height: 19px;
 	color: #fff;
@@ -234,9 +238,9 @@ div.ws_main .wf_block.maximizedvertically{
 	height: expression(
 	(
 	document.body.clientHeight) ?
-	document.body.clientHeight - 97 + 'px'
+	document.body.clientHeight - 59 + 'px'
 	:
-	document.documentElement.clientHeight - 96 + 'px'
+	document.documentElement.clientHeight - 59 + 'px'
 	);
 
 	width: expression(
@@ -251,7 +255,7 @@ div.ws_main .wf_block.maximizedvertically{
 html>body div.ws_main .wf_block.maximizedvertically{
 	height: auto;
 	position: absolute;
-	top: 89px;
+	top: 51px;
 	bottom: 4px;
 	left: 202px;
 	right: 0;
@@ -261,14 +265,14 @@ html>body div.ws_main .wf_block.maximizedvertically{
 
 div.ws_main .wf_block.maximizedvertically .wf_blockmainarea{
 	position: absolute;
-	top: 45px;
+	top: 23px;
 	left: 0;
 	height: expression(
 	(
 	document.body.clientHeight) ?
-	document.body.clientHeight - 144 + 'px'
+	document.body.clientHeight - 84 + 'px'
 	:
-	document.documentElement.clientHeight - 144 + 'px'
+	document.documentElement.clientHeight - 84 + 'px'
 	);
 
 	width: expression(
@@ -467,7 +471,6 @@ div.wf_block ul.wf_toolbar li a:hover {
 	height: 22px;
 	background: url(images/bg_titlebar.gif) repeat-x;
 	width: 100%;
-//display: none;
 }
 
 /*** Begin WS Function (Left) Menu ***/
@@ -517,10 +520,7 @@ div.ws_functionmenu ul.wf_viewmenu li{
 	border-top: 1px solid #F4F4F4;
 	clear: both;
 	display: block;
-	#min-height:31px;
 	overflow:auto;
-	#padding-bottom:3px;
-	#padding-right:3px;
 }
 
 div.ws_functionmenu ul.wf_viewmenu li ul.wf_viewmenu,
@@ -640,54 +640,6 @@ div.ws_functionmenu .wf_viewmenu .deselected a:hover {
 /* Workspace changes (thinner top) TODO merge classes with those above*/ 
 .ws_mainnavigation{
 	margin-top: -37px;
-}
-
-.ws_head{
-	height: 60px !important;
-	background-image: url(images/bg_head.gif) !important;
-}
-
-div.ws_head div.ws_appdecor{
-	top: 2px !important;
-	width: 96px !important;
-	height: 26px !important;
-	background: url(images/eplatform.gif) no-repeat !important;
-}
-
-div.ws_smallloginbox{
-	padding: 1px 1px 0 15px !important;
-}
-
-.ws_appinfo{
-	margin-top: 22px !important;
-}
-
-.ws_body .ws_mainnavigation ul.wf_tabbar li{
-	background-image: url(images/tabbar/bg_item_left.gif) !important;
-	background-position: 0 4px !important;
-}
-
-.ws_body .ws_mainnavigation ul.wf_tabbar li.selected{
-	background: url(images/tabbar/bg_item_left_selected.gif) left top no-repeat !important;
-}
-
-.ws_body .ws_mainnavigation ul.wf_tabbar li.selected a,
-.ws_body .ws_mainnavigation ul.wf_tabbar li.selected a:hover
-{
-	background-image: url(images/tabbar//bg_item_right_selected.gif) !important;
-}
-
-.ws_body .ws_mainnavigation ul.wf_tabbar li a:hover{
-	background-image: url(images/tabbar/bg_item_main_hover.gif) !important;
-	background-position: 0 4px;
-}
-
-div.ws_functionmenu{
-	top: 51px !important;
-}
-
-html>body div.ws_main .wf_block.maximizedvertically{
-	top: 51px !important;
 }
 
 .ws_main{
